[package]
name = "wagr-lmsr-amm"
description = "Logarithmic Market Scoring Rule (Hanson 2003)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wagr-outcome-engine = { path = "../outcome-engine" }
thiserror.workspace = true
num-traits.workspace = true

[dev-dependencies]
approx = "0.5"
