[package]
name = "wagr-oracle-resolver"
description = "UMA-style optimistic + multi-source consensus + dispute payload."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wagr-outcome-engine = { path = "../outcome-engine" }
thiserror.workspace = true
