[package]
name = "wagr-reputation-module"
description = "Reputation DVM + $WAGR slashing for the WAGR oracle."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
wagr-outcome-engine = { path = "../outcome-engine" }
wagr-oracle-resolver = { path = "../oracle-resolver" }
thiserror.workspace = true
